# coffeescraper

./: pyproject.toml
src/coffeescraper/: .gitignore  main.py  settings.py
src/coffeescraper/constants/: coffee_predefined_settings.py  network.py
src/coffeescraper/data_fetching/: fetch.py
src/coffeescraper/firebase/: upload.py
src/coffeescraper/scraping/: scraper.py
src/coffeescraper/vendors/: vendors_abstract.py
src/coffeescraper/vendors/cz/: __init__.py  beansmiths.py  candycane.py  chroast.py  dosmundos.py  doubleshot.py  fatherscoffee.py  fiftybeans.py  francin.py  nordbeans.py  poppybeans.py  theminers.py
